| Summary: | ASTERISK-20495: Segfault in XMPP caused by the presence stanza of one of my contacts | ||
| Reporter: | Martin W (veghead) | Labels: | |
| Date Opened: | 2012-09-30 18:25:37 | Date Closed: | 2012-10-05 22:30:27 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_xmpp |
| Versions: | 11.0.0-beta2 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | built from head on x86_64 Ubuntu | Attachments: | ( 0) 20495.patch |
| Description: | Apologies if this report is a dupe or not appropriate here; I am new to the Asterisk source so please go easy. Builds of asterisk were causing a segfault at start-up. I traced it to a particular contact whose presence contained the following: {code} <c ver="mac-2.2.0s" xmlns="http://jabber.org/protocol/caps"/> {code} It looks like the handling of "node" and "ver" attributes is incorrect: on res_xmpp.c:3144 (r374095). To get it running locally I worked around it with the attached patch. Hope this is useful. | ||
| Comments: | By: Rusty Newton (rnewton) 2012-10-02 09:33:24.998-0500 Please read https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines . Remove the patch from the description and attach as a code contribution with a signed contribution agreement. By: Martin W (veghead) 2012-10-02 10:30:49.255-0500 Suggested fix for ASTERISK-20495 | ||